# sougou-86wubi

DICT/overview/: fmt
DICT/rime/: default.custom.yaml  powerful86wubi.schema.yaml
DICT/sougou/: scheme  sougou
src/: CMakeLists.txt  makefile
src/binsrc/: sort-word.cpp
